--- a/public/eventTemp.html
+++ b/public/eventTemp.html
@@ -59,11 +59,11 @@
   </nav>
 
   <div class="row" style="padding-top: 10vh;">
-     <h1 style="text-align: center;"><span class="spGreen">/* Workshop */</span></h1>
+     <h1 style="text-align: center;"><span class="spMagenta">< Event ></span></h1>
   <div class="col-md-4">
-  <img src="assets/img/blockchainicon.png" class="img-responsive pull-center">
- <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta" >Register_now()</span></a></br></p>
-  <!-- <button  class="tsbutton">Register Now</button> --><noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
+  <img src="assets/img/iconbitcoin.png" class="img-responsive pull-center">
+ <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spGreen" >//Free_Event</span></a></br></p>
+  <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
 </div>
 <div class="col-md-7">
   <div class="item" style="height: unset;">
@@ -76,35 +76,30 @@
         </div>
             <div class="item-desc">
             
-            <p class="item-heading">Blockchain</p>
+            <p class="item-heading">Bitcoin_challenge</p>
             <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-7">
-              <p ><span class="spGreen" >//About</span></br>              
-A blockchain, originally block chain, is a continuously growing list of records, called blocks, which are linked and secured using cryptography. Each block typically contains a cryptographic hash of the previous block, a timestamp and transaction data. By design, a blockchain is inherently resistant to modification of the data.
+              <p ><span class="spGreen" >//About</span></br>Cryptocurrency is hidden in a system, the participant has to make use  of the vulnerabilities in the system to access the cryptocurrency. The winner gets it all.
+
 
 
               </p>
               </div>
 
               <div class="col-md-5">
-              <p><span class="spMagenta">#Date and timing</span></br>25th February 2018</br>10:00 AM to 1:00 PM </br>2:00 PM to 6:00 PM</p>
+              <p><span class="spMagenta">#Date and timing</span></br>24th February 2018</br>9:00 AM to - </br>25th February 2018</br>4:00pm</p>
               </div>
 
           </div>
           <p><span class="spGreen">/*-----------------------------------------------------------*/</span></p> 
           <div style="margin-top: 30px;" class ="row">
 
-              <div class="col-md-4">
-              <p ><span class="spPurple" > >>>Pre-Requisites</span></br>* Interest </br>* <!--CS ISSTAM--></br></p>
+              <div class="col-md-8">
+              <p ><span class="spPurple" > >>>Event Rules</span></br>* Teams of two may participate</br>* Please refrain from helping your friends.</br>* There is no other restriction on participation.</p>
               </div>
-
-              <div class="col-md-4">
-              <p><span class="spMagenta">install_these()</span></br>
-              <a href="#">* </a> </br><a href="#">*</a></br></p>
-              </div>
-              <div class="col-md-4">
-              <p><span class="spOrange">Classes handled by</span></br>* Gokul Baby Alex</br><a href="https://in.linkedin.com/in/gokulbabyalex">::check_this_out()</a></p>
+              <div class="col-md-2">
+              <p><span class="spOrange">$Prize</span></p><p></br><span style="font-size:60px;margin-top: 10px;">20k</span></p>
               </div>
 
           </div>
@@ -113,11 +108,11 @@ A blockchain, originally block chain, is a continuously growing list of records,
 
 
               <div class="col-md-6">
-               <p style="font-size: 30px;margin-top: 20px;"><a href="#" onclick="popup('dotslash-workshops-100344');"><span class="spMagenta" >Register_now()</span></a></br></p>
+               <p style="font-size: 30px;margin-top: 20px;"><a href="#" onclick="popup('dotslash-workshops-100344');"><span class="spGreen" >//Free_Event</span></a></br></p>
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Basil Mathai- 7034877251</br>* Anand Sai - 9495342523</br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Akhil Thankachen - NO EVDE!</br>* Mazhar Jasfin - NO EVDE!</br></p>
               </div>
 
           </div>
