--- a/public/home_temp.html
+++ b/public/home_temp.html
@@ -77,8 +77,8 @@
         <div style="margin-top: 300px;margin-bottom: 150px;">
           <p id="greeting" ></p>
         <h1 style="text-align: center;font-size: 50px;"><span ></span></h1>  
-        
         <h1 style="text-align: center;" class="spGreen dateText"></br>/* 24, 25 Feb 2018 */ </br><span style="color:#cd0000;">!important</span> </h1>
+
       </div>
         
 
@@ -107,7 +107,8 @@
       <img src="assets/img/t-rex_m.png" id="t-rex">
     </div>
 
-    <div class="col-md-8 col-xs-8">
+    <div class="col-md-8 col-xs-12  ">
+      <h2 class="spGreen" style="padding-left: 14vw;">../CET/<span style="background:#4b4b4b;">Computer_Science_Dept</span>/</h2>
       <h2 class="spPurple" style="padding-left: 15vw;">./disruptive_tech</h2>
       <h2 class="spMagenta" style="padding-left: 17vw;">Hello Bitcoin</h2>
       <h2 class="spYellow" style="padding-left: 17vw;">Hello Virtual Reality</h2>
@@ -200,7 +201,7 @@
       <p></p>
     </div>
   <div class="col-md-4">
-      <img src="assets/img/t-rex.png" style="height: 350px;left: 5vw;">
+      <img src="assets/img/isometric.png" style="height: 350px;left: 5vw;">
     </div>  
 
 </div>
@@ -345,7 +346,7 @@
   <div class="row" style="margin:auto">
     <h1 style="text-align: center;"><span class="spMagenta">< Events ></span></h1>
     <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/bitcoin_challenge/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -357,7 +358,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/women_coder';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -369,7 +370,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/code_wars/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -381,7 +382,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/debugger/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -395,7 +396,7 @@
 
 
   <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/quiz/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -407,7 +408,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/gaming/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -419,7 +420,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/reverse_coding/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -431,7 +432,7 @@
     </div>
 
 <div class="col-md-3 col-sm-3">
-      <div class='box' style="background-color: rgb(28, 28, 27);">
+      <div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/obscura/';">
   <div class='wave -one' style="background-color: rgb(236,65,118);"></div>
   <div class='wave -two'></div>
   <div class='wave -three'></div>
@@ -518,7 +519,7 @@ modal code
 <div class="component">
         <!-Start Nav Structure -->
 
-        <section class="foot">
+        <section class="foot" style="background-color: #232323">
           <div class="row">
             <div class="col-md-4 col-xs-12 footerlog">
               <img src="assets/img/footerimg.png" class="fimg">
